se diseña vista de login

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="containter-fluid cont-login">
+  <div class="row h-100">
+    <div class="col-sm-6 cont-form">
+      <form class="form" action="javascript:void(0);">
+        <h2 class="sub-title">Iniciar Sesión</h2>
+        <div class="cont-input">
+          <input class="input-text" type="text" placeholder="Correo Electronico" autocomplete="nope">
+          <span class="material-icons">account_circle</span>
+        </div>
+        <div class="cont-input">
+          <input class="input-text" type="password" placeholder="Contraseña">
+          <span class="material-icons">lock</span>
+        </div>
+        <div class="row mt-5">
+          <div class="col-6">
+            <button class="btn-login">Iniciar</button>
+          </div>
+          <div class="col-6 text-right">
+            <small class="cursor-pointer"> Deseo Registrarme </small>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="col-sm-6 cont-welcome">
+      <div class="welcome">
+        <h1 class="title">Bienvenido a PrestaYA</h1>
+        <img class="logo" src="/assets/imgs/logo-white.svg" alt="logo prestaYa">
+        <p class="text-description">El dinero que necesitas en el momento que lo necestias, facil rapido y sin tanto papeleo.</p>
+        <p class="text-by"> by Andres Leon 2021</p>
+      </div>
+    </div>
+  </div>
+</div>
