--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,10 @@
 //Fonts
-$font-title: '';
+$font-title: 'Montserrat';
 //Color
-$color-dark: #333333;
+$color-black: #333333;
+$color-white: #ffffff;
+$color-gray-light: #bdbdbd;
+$color-blue-light: #00bcd4;
+$color-blue-dark: #3f51b5;
 //border global
 $border-radius: 0.4rem;
