--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "./scss/index";
+html,
+body {
+  height: 100%;
+  font-family: $font-title;
+  overflow: hidden;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
