--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,7 +4,7 @@ $font-title: 'Montserrat';
 $color-black: #333333;
 $color-white: #ffffff;
 $color-gray-light: #bdbdbd;
-$color-blue-light: #00bcd4;
-$color-blue-dark: #3f51b5;
+$color-blue-light: #4d9bbf;
+$color-blue-dark: #37728e;
 //border global
 $border-radius: 0.4rem;
