--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -31,6 +31,9 @@
           &:focus {
             border-bottom: 0.01rem solid $color-blue-light;
           }
+          &:focus~.material-icons {
+            color: $color-blue-light;
+          }
         }
         .material-icons {
           color: $color-gray-light;
@@ -38,6 +41,10 @@
           left: 2%;
           top: 26%;
           font-size: 1.5rem;
+          transition: all 0.4s;
+          &.active {
+            color: $color-blue-light;
+          }
         }
       }
       .btn-login {
@@ -46,11 +53,11 @@
         padding: 0.3rem;
         width: 9rem;
         font-size: 0.9rem;
-        background: #00bcd4;
-        color: white;
+        background: $color-blue-dark;
+        color: $color-white;
         transition: all 0.4s;
         &:hover {
-          background-color: $color-blue-dark;
+          background-color: $color-blue-light;
         }
       }
     }
@@ -58,19 +65,9 @@
 }
 
 .cont-welcome {
-  // background-color: #21D4FD;
-  // background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  // background: #2BC0E4;
-  // /* fallback for old browsers */
-  // background: -webkit-linear-gradient(-33deg, #EAECC6, #2BC0E4);
-  // /* Chrome 10-25, Safari 5.1-6 */
-  // background: linear-gradient(-33deg, #EAECC6, #2BC0E4);
   background: #16222A;
-  /* fallback for old browsers */
   background: -webkit-linear-gradient(-33deg, #3A6073, #16222A);
-  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(-33deg, #3A6073, #16222A);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   height: 100%;
   text-align: center;
   @include display-center;
