se instala sweetalert2

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -14,7 +14,7 @@
               <div class="col-4 cont-user">
                 <div class="row h-100">
                   <div class="col-9 new-credit">
-                    <button class="btn-credit">Solicitar Credito</button>
+                    <button class="btn-credit" (click)="newLoan()">Solicitar Credito</button>
                   </div>
                   <div class="col-3 options-user">
                     Salir <span class="material-icons">exit_to_app</span>
