--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -14,7 +14,8 @@
               <div class="col-4 cont-user">
                 <div class="row h-100">
                   <div class="col-9 new-credit">
-                    <button class="btn-credit" (click)="newLoan()">Solicitar Credito</button>
+                    <button class="btn-credit" *ngIf="showLoan" (click)="showLoan = false;">Solicitar Credito</button>
+                    <button class="btn-credit" *ngIf="!showLoan" (click)="showLoan = true">Ver Prestamos</button>
                   </div>
                   <div class="col-3 options-user">
                     Salir <span class="material-icons">exit_to_app</span>
@@ -24,7 +25,7 @@
             </div>
           </div>
         </div>
-        <div class="row h-100">
+        <div class="row h-100" [class.d-none]="!showLoan">
           <div class="col-12 cont-body">
             <div class="row cont-pending">
               <h2 class="sub-title bg-info">Aprobados</h2>
@@ -60,6 +61,28 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="row justify-content-center cont-form-loan" [class.d-none]="showLoan">
+          <div class="col-5">
+            <form class="form" [formGroup]="formLoan" (ngSubmit)="applyLoan()" action="javascript:void(0);" autocomplete="nope" name="login">
+              <h2 class="sub-title">Cuentanos cuanto Necesitas</h2>
+              <div class="cont-input">
+                <input class="input-text" formControlName="valueLoan" name="loan" type="number" placeholder="200.000" autocomplete="off" readonly onfocus="this.removeAttribute('readonly');">
+                <span class="material-icons">monetization_on</span>
+                <small class="text-danger" *ngIf="formLoan.controls.valueLoan.touched && formLoan.controls.valueLoan.invalid">Recuerda que lo minimo es $10,000 y lo maximo {{valueLoanBase | currency:'$ ':'symbol':'3.0' }}</small>
+              </div>
+              <h2 class="sub-title mt-5">Cuando puedes pagar</h2>
+              <div class="cont-input">
+                <input class="input-text" formControlName="datePay" name="date" type="date" min="{{todate | date:'yyyy-MM-dd'}}">
+                <span class="material-icons">lock</span>
+              </div>
+              <div class="row mt-5">
+                <div class="col-12">
+                  <button class="btn-login" type="submit">Solicitar</button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
