--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -119,4 +119,67 @@
       }
     }
   }
+  .cont-form-loan {
+    height: 85%;
+    @include display-center;
+    .form {
+      width: 100%;
+      height: auto;
+      .sub-title {
+        color: $color-blue-dark;
+        font-weight: 300;
+        font-size: 1.6rem;
+        margin-bottom: 0rem;
+        text-align: center;
+      }
+      .cont-input {
+        width: 100%;
+        height: 3.5rem;
+        position: relative;
+        margin: 1.5rem 0;
+        .input-text {
+          width: 100%;
+          height: 100%;
+          border: none;
+          outline: none;
+          position: relative;
+          padding-left: 12%;
+          transition: all 0.4s;
+          font-size: 0.9rem;
+          background: none;
+          border-bottom: 0.01rem solid $color-gray-light;
+          &:focus {
+            border-bottom: 0.01rem solid $color-blue-light;
+          }
+          &:focus~.material-icons {
+            color: $color-blue-light;
+          }
+        }
+        .material-icons {
+          color: $color-gray-light;
+          position: absolute;
+          left: 2%;
+          top: 26%;
+          font-size: 1.5rem;
+          transition: all 0.4s;
+          &.active {
+            color: $color-blue-light;
+          }
+        }
+      }
+      .btn-login {
+        border-radius: 14rem;
+        border: none;
+        padding: 0.7rem;
+        width: 100%;
+        font-size: 0.9rem;
+        background: $color-blue-dark;
+        color: $color-white;
+        transition: all 0.4s;
+        &:hover {
+          background-color: $color-blue-light;
+        }
+      }
+    }
+  }
 }
