--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -59,6 +59,10 @@
         &:hover {
           background-color: $color-blue-light;
         }
+        .spinner-border {
+          height: 0.9rem;
+          width: 0.9rem;
+        }
       }
     }
   }
