--- a/src/app/views/shared/modules/card/card.component.html
+++ b/src/app/views/shared/modules/card/card.component.html
@@ -1,13 +1,13 @@
 <div class="card-custom">
-  <h2 class="text-value">{{ valueLoan | currency:'$ ':'symbol':'3.0' }}</h2>
+  <h2 class="text-value">{{ data.value | currency:'$ ':'symbol':'3.0' }}</h2>
   <div class="row cont-description">
     <div class="col-6 separete">
       <p class="text-date"> Fecha de Prestamo </p>
-      <p class="text-date"> 12-02-21 </p>
+      <p class="text-date"> {{ data.dateStart | date }} </p>
     </div>
     <div class="col-6">
-      <p class="text-date">Fecha de Pago</p>
-      <p class="text-date"> 12-03-21 </p>
+      <p class="text-date">{{ !data.loanPay ? 'Fecha de Pago' : 'Pagaste'}}</p>
+      <p class="text-date"> {{ data.datePay | date }} </p>
     </div>
   </div>
   <button class="btn-pay bg-info" *ngIf="type === 'pending'">Pagar</button>
