--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,7 +1,7 @@
-<div class="container bg-light py-5">
-  <h1 class="text-center text-secondary">Solo para Adminsitradores, encontraras todos los usuarios registrados y sus creditos</h1>
+<div class="container-fluid bg-light py-5 cont-admin">
+  <h1 class="text-center text-secondary text-title">Solo para Adminsitradores, encontraras todos los usuarios registrados y sus creditos</h1>
   <div class="row mt-5 pb-5">
-    <div class="col-12 table-responsive-lg">
+    <div class="col-12 table-responsive-lg text-nowrap">
       <table class="table table-striped table-dark">
         <thead>
           <tr>
