--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,23 +1,23 @@
 <div class="container-fluid h-100">
   <div class="row ">
-    <div class="col-12">
+    <div class="col-12 p-0">
       <div class="container cont-home">
         <div class="row">
           <div class="col-12 cont-header">
             <div class="row h-100">
-              <div class="col-4 cont-logo">
-                <h1 class="title">Hola <span class="name-user"> {{nameUser.split(' ')[0] | titlecase}} </span> Bienvienido a <img class="img" src="/assets/imgs/logo-white.svg" alt="prestaYa"> </h1>
+              <div class="col-12 col-sm-4 cont-logo">
+                <h1 class="title">Hola <span class="name-user"> {{nameUser.split(' ')[0] | titlecase}} </span> Bienvienido a <img class="img" src="/assets/imgs/logo-white.svg" alt="prestaYa"> <span class="material-icons d-block d-sm-none" (click)="logout()">exit_to_app</span></h1>
               </div>
-              <div class="col-4">
+              <div class="col-12 col-sm-4 p-0">
                 <app-loan></app-loan>
               </div>
-              <div class="col-4 cont-user">
+              <div class="col-12 col-sm-4 cont-user">
                 <div class="row h-100">
-                  <div class="col-9 new-credit">
+                  <div class="col-12 col-sm-9 new-credit">
                     <button class="btn-credit" *ngIf="showLoan" (click)="showFormLoan()">Solicitar Credito</button>
                     <button class="btn-credit" *ngIf="!showLoan" (click)="showFormLoan()">Ver Prestamos</button>
                   </div>
-                  <div class="col-3 options-user" (click)="logout()">
+                  <div class="col-3 options-user d-none d-sm-flex" (click)="logout()">
                     Salir <span class="material-icons">exit_to_app</span>
                   </div>
                 </div>
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="row justify-content-center cont-form-loan" [class.d-none]="showLoan">
-          <div class="col-5">
+          <div class="col-12 col-sm-5">
             <form class="form" [formGroup]="formLoan" (ngSubmit)="applyLoan()" action="javascript:void(0);" autocomplete="nope" name="login">
               <h2 class="sub-title">Cuentanos cuanto necesitas</h2>
               <div class="cont-input">
