--- a/src/app/views/shared/modules/loan/loan.component.html
+++ b/src/app/views/shared/modules/loan/loan.component.html
@@ -1,8 +1,8 @@
 <div class="cont-loan row">
-  <div class="col-4">
+  <div class="col-6 col-sm-4">
     <h3 class="text-loan">Podemos Prestarte:</h3>
   </div>
-  <div class="col-8">
+  <div class="col-6 col-sm-8">
     <p class="text-value">{{loanBase | currency:'$ ':'symbol':'3.0'}}</p>
   </div>
 </div>
